--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Day 3 Assignment</title>
+  <title>HTML_CSS_Essentials_Assign32023</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <nav class="nav-bar">
-    <img src="">
+  <nav class="nav-links">
     <ul class="nav-items">
-      <li class="nav-item">Home</li>
-      <li class="nav-item">About</li>
-      <li class="nav-item">Products</li>
-      <li class="nav-item">Contact Us</li>
+      <li class="nav-item">
+        <a href="Day3Assignment/index.html">View Day 3 Assignment</a>
+      </li>
+      <li class="nav-item">
+        <a href="Day4Assignment/index.html">View Day 4 Assignment</a>
+      </li>
+      <li class="nav-item">
+        <a href="Project/index.html">View Project</a>
+      </li>
+
     </ul>
   </nav>
 </body>
