--- a/Project/index.html
+++ b/Project/index.html
@@ -4,16 +4,71 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Day 4 Assignment</title>
+  <title>My Portfolio</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <div class="parent">
-    <div class="child"></div>
-    <div class="child"></div>
-    <div class="child"></div>
-    <div class="child"></div>
+  <header class="nav-bar">
+    <ul class="nav-links">
+      <li class="nav-link"><a href="#">Home</a></li>
+      <li class="nav-link"><a href="#">Education</a></li>
+      <li class="nav-link"><a href="#">Work History</a></li>
+      <li class="nav-link"><a href="#">Projects</a></li>
+      <li class="nav-link"><a href="#">Recommendations</a></li>
+    </ul>
+  </header>
+  <div class="container">
+    <div class="side-nav">
+      <div class="dp"></div>
+      <div class="personal-details">
+        <p>Name</p>
+        <p>Designation</p>
+        <div class="social-network">Social Network Icon List</div>
+      </div>
+      <hr />
+      <div class="other-details">
+        <p>Age:30</p>
+        <p>Address: Shillong</p>
+      </div>
+      <hr />
+      <div class="languages">
+        <h5>Languages</h5>
+        <p>English: Proficient</p>
+        <p>Khasi: Proficient</p>
+        <p>Hindi: Beginner</p>
+      </div>
+      <hr />
+      <div class="skills">
+        <h5>Skills</h5>
+        <p>HTML: Proficient</p>
+        <p>CSS: Proficient</p>
+        <p>JavaScript: Proficient</p>
+      </div>
+      <hr />
+    </div>
+    <div class="main">
+      <div class="intro">
+        <div class="basic-details">
+          <h1>I'm Ambition Kyndiah <br><span class="fs-span">Full Stack</span> Developer</h1>
+          <p>Tell here mostly about your basic details what you are doing and your passsion and interest, how it help
+            others </p>
+          <button class="hire-me">Hire Me</button>
+        </div>
+        <div class="my-image">
+          <img class="my-img" src="my-image.png">
+        </div>
+      </div>
+      <div class="edu-section">
+        <h1>Education</h1>
+        <p class="edu-para">Students can get admitted to diploma in engineering course after completion of their
+          secondary school level.
+          It is a 3-year program with three and a half-year study and six months mandatory internship. Diploma is
+          awarded in a specific branch of engineering.</p>
+        <div class="edu-box"></div>
+      </div>
+    </div>
+  </div>
   </div>
 </body>
 
