--- a/Project/index.html
+++ b/Project/index.html
@@ -65,7 +65,75 @@
           secondary school level.
           It is a 3-year program with three and a half-year study and six months mandatory internship. Diploma is
           awarded in a specific branch of engineering.</p>
-        <div class="edu-box"></div>
+        <div class="edu-box">
+          <div class="edu-box-details">
+            <div class="institute-detail">
+              <h2>University Name</h2>
+            </div>
+            <div class="certificate-detail">
+              <h2>Training Certification-1</h2>
+              <p>LetsUpgrade HTML & CSS Essentials Bootcamp (5 Days) in collaboration with the Google Developer Group
+                MAD
+                Mumbai, National Skill Development Corporation, ITM Group of Institutions, and LetsUpgrade </p>
+            </div>
+          </div>
+          <div class="edu-box-details">
+            <div class="institute-detail">
+              <h2>University Name</h2>
+            </div>
+            <div class="certificate-detail">
+              <h2>Training Certification-1</h2>
+              <p>LetsUpgrade HTML & CSS Essentials Bootcamp (5 Days) in collaboration with the Google Developer Group
+                MAD
+                Mumbai, National Skill Development Corporation, ITM Group of Institutions, and LetsUpgrade </p>
+            </div>
+          </div>
+          <div class="edu-box-details">
+            <div class="institute-detail">
+              <h2>University Name</h2>
+            </div>
+            <div class="certificate-detail">
+              <h2>Training Certification-1</h2>
+              <p>LetsUpgrade HTML & CSS Essentials Bootcamp (5 Days) in collaboration with the Google Developer Group
+                MAD
+                Mumbai, National Skill Development Corporation, ITM Group of Institutions, and LetsUpgrade </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="project-section">
+        <h2>Projects</h2>
+        <p class="project-para">Freelance personal training: Personal trainers can work as freelancers and offer their
+          services to clients on
+          a project or retainer basis.</p>
+        <div class="cards-container">
+          <div class="cards">
+            <div class="card">
+              <p>Project 1</p>
+              <p>Project Description</p>
+              <img src="https://lucdn.letsupgrade.net/assets/HTML_CSS_Zero_to_Hero_024766365a.webp" width="150"
+                height="100">
+            </div>
+            <div class="card">
+              <p>Project 2</p>
+              <p>Project Description</p>
+              <img src="https://lucdn.letsupgrade.net/assets/HTML_CSS_Zero_to_Hero_024766365a.webp" width="150"
+                height="100">
+            </div>
+            <div class="card">
+              <p>Project 3</p>
+              <p>Project Description</p>
+              <img src="https://lucdn.letsupgrade.net/assets/HTML_CSS_Zero_to_Hero_024766365a.webp" width="150"
+                height="100">
+            </div>
+            <div class="card">
+              <p>Project 5</p>
+              <p>Project Description</p>
+              <img src="https://lucdn.letsupgrade.net/assets/HTML_CSS_Zero_to_Hero_024766365a.webp" width="150"
+                height="100">
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
